In Image: Refactor GetMapping("/profile/{identity}/album")